--- a/views/professors/show.ejs
+++ b/views/professors/show.ejs
@@ -74,7 +74,7 @@
       </div>
 
       <div class="col-md-4">
-        <h6 class="fw-semibold text-secondary">FYP Support</h6>
+        <h6 class="fw-semibold text-secondary">Teaching & Study Material</h6>
         <div class="progress" style="height: 12px;">
           <div class="progress-bar bg-success" style="width: <%= (fypAvg / 5) * 100 %>%"></div>
         </div>
