Change label from 'FYP Support' to 'Teaching & Study Material'

--- a/views/professors/show.ejs
+++ b/views/professors/show.ejs
@@ -164,7 +164,7 @@
             </select>
           </div>
           <div class="col-md-4">
-            <label class="form-label">FYP Support</label>
+            <label class="form-label">Teaching & Study Material</label>
             <select name="review[fypSupport]" class="form-select">
               <% for (let i = 5; i >= 1; i--) { %>
                 <option value="<%= i %>"><%= "⭐".repeat(i) %></option>
