--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -9,7 +9,7 @@
       <div class="col-md-6 text-center text-md-start">
         <div class="hero-content fade-in">
           <h1 class="display-4 fw-bold mb-3 text-gradient">
-            Welcome to Mentor Meter (M-Square)
+            Welcome to Mentor Meter <p class="display-6 fw-bold mb-3 text-gradient">(M-Square)</p>
           </h1>
           <p class="lead text-muted mb-4">
             Your gateway to rate, review, and discover top professors around you.
